        * Add new api to set and get default event flags.

2011-12-19  Carsten Haitzler (The Rasterman)

        * Add new canvas events called just before and after evas rendering
        starts and stops.

2011-12-21  ChunEon Park (Hermet)

	* Events: repeat events should not be affected by children.
	Fixed to object passes events to the next object in the same layer
	if the repeat_events is enabled.

2011-12-23 Sanghee Park

        * Extend pixman support to allow other operations to use
          pixman when doing software rendering. On x86 this isn't useful
          but on ARMv7 with NEON pixman happens to do better with image
          blending and nearest scale blending.
        * Add tiled rotator for 32bit display as an option.

2011-12-26  Christopher Michael (devilhorns)

        * Add functions to get/set if an object is a 'frame_object'

2011-12-27  Carsten Haitzler (The Rasterman)

        * Add feature to get number of pressed devices (help fix
          ecore-evas bug).

2011-12-28  Carsten Haitzler (The Rasterman)

        * Add recursive name find function - evas_object_name_child_find()

2012-01-01  Carsten Haitzler (The Rasterman)

        * Improve CPU use on nvidia drivers when vsyncing. It was
          actually glXWaitGL() spinning, not glXSwapBuffers(), so this
          points to a bug in the nvidia drivers where the sleep logic
          in glXSwapBuffers() hasn't been transferred to glXWaitGL().
          Avoid use of glXWaitGL() to avoid the nvidia bug.

2012-01-02  Cedric Bail

	* Fix unitialized value when running generic loader without any
	application found to open the file.
	* Use Eina_File when openning XPM file.

2012-01-03  Cedric Bail

	* Use Eina_File for PSD file to.

2012-01-06  Sung W. Park (sung_)

        * Add EvasGL support to software backend using OSMesa.  Requires OSMesa
          library.  Due to caveats in OSMesa, surface config stays with a 
          context